Add secrets for packet cluster profile

--- a/core-services/ci-secret-bootstrap/_config.yaml
+++ b/core-services/ci-secret-bootstrap/_config.yaml
@@ -642,6 +642,36 @@
     - cluster: default
       namespace: ci
       name: cluster-secrets-metal
+# packet
+- from:
+    pull-secret:
+      bw_item: quay.io
+      attachment: pull-secret
+    insights-live.yaml:
+      bw_item: insights-ci-account
+      attachment: insights-live.yaml
+    .awscred:
+      bw_item: jenkins-ci-iam
+      attachment: .awscred
+    ssh-privatekey:
+      bw_item: jenkins-ci-iam
+      attachment: ssh-privatekey
+    ssh-publickey:
+      bw_item: jenkins-ci-iam
+      attachment: ssh-publickey
+    .packetcred:
+      bw_item: packet.net
+      attachment: .packetcred
+    matchbox-client.crt:
+      bw_item: packet.net
+      attachment: client.crt
+    matchbox-client.key:
+      bw_item: packet.net
+      attachment: client.key
+  to:
+    - cluster: default
+      namespace: ci
+      name: cluster-secrets-packet
 #azure4
 - from:
     pull-secret:
