cincinnati: change to new secrets

--- a/ci-operator/jobs/openshift/cincinnati/openshift-cincinnati-master-presubmits.yaml
+++ b/ci-operator/jobs/openshift/cincinnati/openshift-cincinnati-master-presubmits.yaml
@@ -24,7 +24,7 @@ presubmits:
         - --org=openshift
         - --repo=cincinnati
         - --resolver-address=http://ci-operator-configresolver-ci.svc.ci.openshift.org
-        - --secret-dir=/usr/local/ci-secrets/cincinnati-secrets-quay
+        - --secret-dir=/usr/local/ci-secrets/cincinnati-credentials
         - --sentry-dsn-path=/etc/sentry-dsn/ci-operator
         - --target=cargo-test
         command:
@@ -45,8 +45,8 @@ presubmits:
         - mountPath: /etc/apici
           name: apici-ci-operator-credentials
           readOnly: true
-        - mountPath: /usr/local/ci-secrets/cincinnati-secrets-quay
-          name: cincinnati-secrets-quay
+        - mountPath: /usr/local/ci-secrets/cincinnati-credentials
+          name: cincinnati-secrets-cincinnati-credentials
           readOnly: true
         - mountPath: /etc/pull-secret
           name: pull-secret
@@ -62,9 +62,9 @@ presubmits:
           - key: sa.ci-operator.apici.config
             path: kubeconfig
           secretName: apici-ci-operator-credentials
-      - name: cincinnati-secrets-quay
+      - name: cincinnati-secrets-cincinnati-credentials
         secret:
-          secretName: cincinnati-secrets-quay
+          secretName: cincinnati-secrets-cincinnati-credentials
       - name: pull-secret
         secret:
           secretName: regcred
