--- a/clusters/build-clusters/01_cluster/openshift/secret-mirroring/_mapping.yaml
+++ b/clusters/build-clusters/01_cluster/openshift/secret-mirroring/_mapping.yaml
@@ -73,10 +73,10 @@ secrets:
     name: ci-pull-credentials
 - from:
     namespace: cincinnati-ci
-    name: cincinnati-secrets-quay
+    name: cincinnati-secrets-cincinnati-credentials
   to:
     namespace: ci
-    name: cincinnati-secrets-quay
+    name: cincinnati-secrets-cincinnati-credentials
 - from:
     namespace: integr8ly
     name: integr8ly-ci-secrets
