--- a/ci-operator/config/openshift/cincinnati/openshift-cincinnati-master.yaml
+++ b/ci-operator/config/openshift/cincinnati/openshift-cincinnati-master.yaml
@@ -43,14 +43,15 @@ tests:
 - as: cargo-test
   artifact_dir: /tmp/artifacts
   commands: |
-    env CINCINNATI_TEST_CREDENTIALS_PATH=/usr/local/ci-secrets/cincinnati-secrets-quay/docker.config.json \
-        CINCINNATI_TEST_QUAY_API_TOKEN_PATH=/usr/local/ci-secrets/cincinnati-secrets-quay/api_access_token \
+    env CINCINNATI_TEST_CREDENTIALS_PATH=/usr/local/ci-secrets/cincinnati-credentials/registry_credentials_docker.json \
+        CINCINNATI_TEST_QUAY_API_TOKEN_PATH=/usr/local/ci-secrets/cincinnati-credentials/quay_api_access_token.key \
+        CINCINNATI_GITHUB_SCRAPER_OAUTH_TOKEN_PATH=/usr/local/ci-secrets/cincinnati-credentials/github_token.key \
     dist/cargo_test.sh
   container:
     from: src
   secret:
-    mount_path: /usr/local/ci-secrets/cincinnati-secrets-quay
-    name: cincinnati-secrets-quay
+    mount_path: /usr/local/ci-secrets/cincinnati-credentials
+    name: cincinnati-secrets-cincinnati-credentials
 - as: yaml-lint
   commands: dist/prow_yaml_lint.sh
   container:
