--- a/ci-operator/config/openshift/knative-eventing-contrib/openshift-knative-eventing-contrib-release-next.yaml
+++ b/ci-operator/config/openshift/knative-eventing-contrib/openshift-knative-eventing-contrib-release-next.yaml
@@ -82,6 +82,14 @@ images:
       - destination_dir: .
         source_path: /go/bin/websocketsource
   to: knative-eventing-sources-websocketsource
+- dockerfile_path: openshift/ci-operator/knative-images/appender/Dockerfile
+  from: base
+  inputs:
+    bin:
+      paths:
+      - destination_dir: .
+        source_path: /go/bin/appender
+  to: knative-eventing-sources-appender
 - dockerfile_path: openshift/ci-operator/knative-images/kafka-channel-controller/Dockerfile
   from: base
   inputs:
@@ -106,6 +114,14 @@ images:
       - destination_dir: .
         source_path: /go/bin/kafka-channel-webhook
   to: knative-eventing-sources-kafka-channel-webhook
+- dockerfile_path: openshift/ci-operator/knative-test-images/kafka_performance/Dockerfile
+  from: base
+  inputs:
+    test-bin:
+      paths:
+      - destination_dir: .
+        source_path: /go/bin/kafka_performance
+  to: knative-eventing-sources-test-kafka-performance
 promotion:
   name: knative-nightly
   namespace: openshift
