hypershift-toolkit: Add control-plane-operator image

--- a/ci-operator/config/openshift/hypershift-toolkit/openshift-hypershift-toolkit-master.yaml
+++ b/ci-operator/config/openshift/hypershift-toolkit/openshift-hypershift-toolkit-master.yaml
@@ -14,6 +14,9 @@ build_root:
 images:
 - from: base
   to: hypershift-toolkit
+- from: base
+  to: control-plane-operator
+  dockerfile_path: Dockerfile.cpoperator
 promotion:
   name: hypershift-4.4
   namespace: hypershift-toolkit
