--- a/ci-operator/config/openshift/hypershift-toolkit/openshift-hypershift-toolkit-release-4.3.yaml
+++ b/ci-operator/config/openshift/hypershift-toolkit/openshift-hypershift-toolkit-release-4.3.yaml
@@ -22,6 +22,9 @@ images:
 - dockerfile_path: DockerCITest
   from: iks
   to: iks-deploy
+- from: base
+  to: control-plane-operator
+  dockerfile_path: Dockerfile.cpoperator
 promotion:
   name: hypershift-4.3
   namespace: hypershift-toolkit
