--- a/projects/gc-daemonset/daemonset.yaml
+++ b/projects/gc-daemonset/daemonset.yaml
@@ -230,6 +230,24 @@ spec:
         resources:
           requests:
             cpu: 50m
+      - command:
+        - /bin/bash
+        - -c
+        - |
+          #!/bin/bash
+          set -euo pipefail
+
+          trap 'jobs -p | xargs -r kill || true; exit 0' TERM
+          while true; do
+            sleep 600 &
+            wait $!
+          done
+        image: registry.svc.ci.openshift.org/ocp/4.5:base
+        imagePullPolicy: Always
+        name: 45base
+        resources:
+          requests:
+            cpu: 50m
       restartPolicy: Always
   templateGeneration: 1
   updateStrategy:
