Require /approve on autoscaler repo

--- a/core-services/prow/02_config/_plugins.yaml
+++ b/core-services/prow/02_config/_plugins.yaml
@@ -17,6 +17,7 @@ approve:
   require_self_approval: false
 - ignore_review_state: true
   repos:
+  - openshift/kubernetes-autoscaler
   - openshift/machine-api-operator
   - openshift/cluster-api
   - openshift/cluster-api-provider-aws
@@ -2413,6 +2414,8 @@ plugins:
   openshift/kubefed-operator:
   - approve
   openshift/kubernetes:
+  - approve
+  openshift/kubernetes-autoscaler:
   - approve
   openshift/kubernetes-kube-storage-version-migrator:
   - approve
