--- a/projects/gc-daemonset/daemonset.yaml
+++ b/projects/gc-daemonset/daemonset.yaml
@@ -1,7 +1,10 @@
 apiVersion: extensions/v1beta1
 kind: DaemonSet
 metadata:
+  labels:
+    app: dont-gc-me-bro
   name: dont-gc-me-bro
+  namespace: ci
 spec:
   revisionHistoryLimit: 1
   selector:
@@ -151,24 +154,6 @@ spec:
             sleep 600 &
             wait $!
           done
-        image: registry.svc.ci.openshift.org/ocp/4.0:base
-        imagePullPolicy: Always
-        name: 40base
-        resources:
-          requests:
-            cpu: 50m
-      - command:
-        - /bin/bash
-        - -c
-        - |
-          #!/bin/bash
-          set -euo pipefail
-
-          trap 'jobs -p | xargs -r kill || true; exit 0' TERM
-          while true; do
-            sleep 600 &
-            wait $!
-          done
         image: registry.svc.ci.openshift.org/ocp/4.1:base
         imagePullPolicy: Always
         name: 41base
@@ -211,7 +196,6 @@ spec:
         resources:
           requests:
             cpu: 50m
-      restartPolicy: Always
       - command:
         - /bin/bash
         - -c
