secret-mapping/cincinnati: remove prefix in `from`
It's unclear to me why the prefix had been there before the previous
change, but it seems like it's incorrect as it is.

--- a/clusters/build-clusters/01_cluster/openshift/secret-mirroring/_mapping.yaml
+++ b/clusters/build-clusters/01_cluster/openshift/secret-mirroring/_mapping.yaml
@@ -73,7 +73,7 @@ secrets:
     name: ci-pull-credentials
 - from:
     namespace: cincinnati-ci
-    name: cincinnati-secrets-cincinnati-credentials
+    name: cincinnati-credentials
   to:
     namespace: ci
     name: cincinnati-secrets-cincinnati-credentials
