Allow art to modify 4.5 release

--- a/core-services/release-controller/admin_deploy-ocp-publish-art.yaml
+++ b/core-services/release-controller/admin_deploy-ocp-publish-art.yaml
@@ -24,6 +24,7 @@ rules:
   - '4.2-art-latest'
   - '4.3-art-latest'
   - '4.4-art-latest'
+  - '4.5-art-latest'
   verbs:
   - get
   - list
@@ -46,6 +47,7 @@ rules:
       - '4.2-art-latest-s390x'
       - '4.3-art-latest-s390x'
       - '4.4-art-latest-s390x'
+      - '4.5-art-latest-s390x'
     verbs:
       - get
       - list
@@ -68,6 +70,7 @@ rules:
       - '4.2-art-latest-ppc64le'
       - '4.3-art-latest-ppc64le'
       - '4.4-art-latest-ppc64le'
+      - '4.5-art-latest-ppc64le'
     verbs:
       - get
       - list
