--- a/ci-operator/config/openshift/openshift-tests-private/openshift-openshift-tests-private-release-4.13__amd64-nightly.yaml
+++ b/ci-operator/config/openshift/openshift-tests-private/openshift-openshift-tests-private-release-4.13__amd64-nightly.yaml
@@ -3571,6 +3571,22 @@ tests:
     test:
     - chain: openshift-e2e-test-qe
     workflow: cucushift-installer-rehearse-vsphere-upi-zones
+- as: baremetal-ipi-ovn-ipv4-p1-f14
+  cluster: build05
+  cron: 30 21 5,18 * *
+  steps:
+    cluster_profile: equinix-ocp-metal-qe
+    env:
+      AUX_HOST: openshift-qe-012.arm.eng.rdu2.redhat.com
+      E2E_RUN_TAGS: '@baremetal-ipi and @amd64 and @network-ovnkubernetes and not
+        @fips'
+      TAG_VERSION: '@4.13'
+      architecture: amd64
+      masters: "3"
+      workers: "2"
+    test:
+    - chain: openshift-e2e-test-qe
+    workflow: baremetal-lab-ipi
 zz_generated_metadata:
   branch: release-4.13
   org: openshift
