--- a/ci-operator/config/openshift/openshift-tests-private/openshift-openshift-tests-private-release-4.13__arm64-nightly.yaml
+++ b/ci-operator/config/openshift/openshift-tests-private/openshift-openshift-tests-private-release-4.13__arm64-nightly.yaml
@@ -1758,6 +1758,27 @@ tests:
     test:
     - chain: openshift-e2e-test-qe
     workflow: baremetal-lab-upi
+- as: baremetal-ipi-ovn-ipv4-p1-f14
+  cluster: build05
+  cron: 30 21 1,14 * *
+  steps:
+    cluster_profile: equinix-ocp-metal-qe
+    dependencies:
+      OPENSHIFT_INSTALL_RELEASE_IMAGE_OVERRIDE: release:arm64-latest
+    env:
+      AUX_HOST: openshift-qe-bastion.arm.eng.rdu2.redhat.com
+      E2E_RUN_TAGS: '@baremetal-ipi and @arm64 and @network-ovnkubernetes and not
+        @fips'
+      PROVISIONING_HOST: openshift-qe-bastion.arm.eng.rdu2.redhat.com
+      PROVISIONING_NET_DEV: enP2p2s0f1
+      RESERVE_BOOTSTRAP: "false"
+      TAG_VERSION: '@4.13'
+      architecture: arm64
+      masters: "3"
+      workers: "2"
+    test:
+    - chain: openshift-e2e-test-qe
+    workflow: baremetal-lab-ipi
 zz_generated_metadata:
   branch: release-4.13
   org: openshift
