CAPZ: add verify-git-history

--- a/ci-operator/config/openshift/cluster-api-provider-azure/openshift-cluster-api-provider-azure-master.yaml
+++ b/ci-operator/config/openshift/cluster-api-provider-azure/openshift-cluster-api-provider-azure-master.yaml
@@ -45,6 +45,10 @@ tests:
   commands: openshift/unit-tests.sh
   container:
     from: src
+- as: verify-git-history
+  commands: openshift/verify-history.sh
+  container:
+    from: src
 - as: e2e-azure
   skip_if_only_changed: ^docs/|\.md$|^(?:.*/)?(?:\.gitignore|OWNERS|PROJECT|LICENSE)$
   steps:
