Adding workflow for disconnected proxy install

--- a/ci-operator/config/openshift/openshift-tests-private/openshift-openshift-tests-private-release-4.13__arm64-nightly.yaml
+++ b/ci-operator/config/openshift/openshift-tests-private/openshift-openshift-tests-private-release-4.13__arm64-nightly.yaml
@@ -1758,7 +1758,7 @@ tests:
     test:
     - chain: openshift-e2e-test-qe
     workflow: baremetal-lab-upi
-- as: baremetal-upi-ovn-ipv4-disconnected-p1-f14
+- as: baremetal-upi-ovn-ipv4-disconnected-proxy-p1-f14
   cluster: build05
   cron: 30 21 1,14 * *
   steps:
@@ -1767,7 +1767,6 @@ tests:
       OPENSHIFT_INSTALL_RELEASE_IMAGE_OVERRIDE: release:arm64-latest
     env:
       AUX_HOST: openshift-qe-bastion.arm.eng.rdu2.redhat.com
-      DISCONNECTED: "true"
       E2E_RUN_TAGS: '@baremetal-upi and @arm64 and @disconnected and @network-ovnkubernetes
         and not @fips'
       TAG_VERSION: '@4.13'
@@ -1776,7 +1775,7 @@ tests:
       workers: "2"
     test:
     - chain: openshift-e2e-test-qe
-    workflow: baremetal-lab-upi
+    workflow: baremetal-lab-upi-install-disconnected-proxy
 zz_generated_metadata:
   branch: release-4.13
   org: openshift
