--- a/ci-operator/step-registry/baremetal/lab/upi/conf/disconnected/proxy/baremetal-lab-upi-conf-disconnected-proxy-chain.yaml
+++ b/ci-operator/step-registry/baremetal/lab/upi/conf/disconnected/proxy/baremetal-lab-upi-conf-disconnected-proxy-chain.yaml
@@ -1,7 +1,18 @@
 chain:
   as: baremetal-lab-upi-conf-disconnected-proxy
   steps:
-    - chain: baremetal-lab-upi-conf
+    steps:
+    - ref: baremetal-lab-pre-reserve-nodes
+    - ref: baremetal-lab-pre-dhcp-conf
+    - ref: baremetal-lab-pre-load-balancer
+    - ref: baremetal-lab-pre-dns
+    - ref: baremetal-lab-pre-firewall
+    - chain: mirror-images-by-oc-adm
+    - ref: baremetal-lab-pre-console-kargs
+    - ref: baremetal-lab-pre-pull-artifacts
+    - ref: baremetal-lab-upi-conf-grub2
+    - ref: ipi-conf
+    - ref: ipi-conf-telemetry
     - ref: ipi-conf-mirror
     - ref: ipi-conf-proxy
   documentation: |-
