--- a/ci-operator/config/redhat-chaos/krkn-hub/redhat-chaos-krkn-hub-main.yaml
+++ b/ci-operator/config/redhat-chaos/krkn-hub/redhat-chaos-krkn-hub-main.yaml
@@ -1,4 +1,8 @@
 base_images:
+  cerberus.prow.base:
+    name: cerberus
+    namespace: chaos
+    tag: latest
   os:
     name: centos
     namespace: openshift
@@ -9,6 +13,12 @@ images:
 - dockerfile_path: prow/Dockerfile
   from: os
   to: krkn-hub
+- dockerfile_path: cerberus/Dockerfile_prow
+  from: cerberus.prow.base
+  to: cerberus-prow
+promotion:
+  namespace: chaos
+  tag: latest
 releases:
   initial:
     integration:
@@ -33,6 +43,9 @@ tests:
     cluster_profile: aws
     env:
       SPOT_INSTANCES: "true"
+    observers:
+      enable:
+      - redhat-chaos-cerberus
     post:
     - chain: ipi-aws-post
     pre:
