testing Compact defining 2 worker nodes

--- a/ci-operator/config/openshift/openshift-tests-private/openshift-openshift-tests-private-release-4.14__amd64-nightly-agent.yaml
+++ b/ci-operator/config/openshift/openshift-tests-private/openshift-openshift-tests-private-release-4.14__amd64-nightly-agent.yaml
@@ -95,6 +95,22 @@ tests:
       masters: "1"
       workers: "0"
     workflow: baremetal-lab-agent-install-network-static
+- as: baremetal-compact-ipv4-static-p1-f14
+  cluster: build05
+  cron: 30 21 7,21 * *
+  steps:
+    cluster_profile: equinix-ocp-metal-qe
+    env:
+      AUX_HOST: openshift-qe-bastion.arm.eng.rdu2.redhat.com
+      DISCONNECTED: "false"
+      INTERNAL_NET_CIDR: 192.168.90.0/24
+      RESERVE_BOOTSTRAP: "false"
+      architecture: amd64
+      ipv4_enabled: "true"
+      ipv6_enabled: "false"
+      masters: "3"
+      workers: "2"
+    workflow: baremetal-lab-agent-install-network-static
 zz_generated_metadata:
   branch: release-4.14
   org: openshift
