ipi windows machineset on vsphere installation
fix-ci-operator...cucushift-winc-prepare-commands.sh curly brace

vsphere-8 -> vsphere profile

added rrasouli in reviewers

changed windows image

--- a/ci-operator/config/openshift/verification-tests/openshift-verification-tests-master__installer-rehearse-4.14.yaml
+++ b/ci-operator/config/openshift/verification-tests/openshift-verification-tests-master__installer-rehearse-4.14.yaml
@@ -89,11 +89,11 @@ tests:
   steps:
     cluster_profile: vsphere-dis
     workflow: cucushift-installer-rehearse-vsphere-upi-disconnected
-- as: installer-rehearse-vsphere-ipi-template
+- as: installer-rehearse-vsphere
   cron: '@yearly'
   steps:
-    cluster_profile: vsphere-connected
-    workflow: cucushift-installer-rehearse-vsphere-ipi-template
+    cluster_profile: vsphere
+    workflow: cucushift-installer-rehearse-vsphere-ipi-ovn-winc
 zz_generated_metadata:
   branch: master
   org: openshift
