--- a/ci-operator/config/openshift/openshift-tests-private/openshift-openshift-tests-private-release-4.14__amd64-nightly.yaml
+++ b/ci-operator/config/openshift/openshift-tests-private/openshift-openshift-tests-private-release-4.14__amd64-nightly.yaml
@@ -3542,18 +3542,18 @@ tests:
     test:
     - chain: openshift-e2e-test-qe
     workflow: cucushift-installer-rehearse-vsphere-ipi-ovn-shared-to-local-gateway-mode-migration
-- as: vsphere-ipi-ovn-shared-to-local-gw-migration-f28-destructive
-  cron: 36 6 6 * *
+- as: vsphere-ipi-ovn-winc-p2-f14
+  cron: 32 12 8,23 * *
   steps:
-    cluster_profile: vsphere
+    cluster_profile: vsphere-connected
     env:
       E2E_RUN_TAGS: '@amd64 and @vsphere-ipi and @network-ovnkubernetes and not @fips'
       TAG_VERSION: '@4.14'
     test:
     - chain: openshift-e2e-test-qe-destructive
     workflow: cucushift-installer-rehearse-vsphere-ipi-ovn-shared-to-local-gateway-mode-migration
-- as: vsphere-ipi-proxy-fips-f28
-  cron: 37 3 9 * *
+- as: vsphere-ipi-proxy-fips-p2-f14
+  cron: 31 11 13,28 * *
   steps:
     cluster_profile: vsphere-dis
     env:
