--- a/ci-operator/config/redhat-developer/gitops-operator/redhat-developer-gitops-operator-change-installation-namespace__v4.10.yaml
+++ b/ci-operator/config/redhat-developer/gitops-operator/redhat-developer-gitops-operator-change-installation-namespace__v4.10.yaml
@@ -65,8 +65,8 @@ tests:
       cli: latest
       commands: |
         oc create namespace "$INSTALL_NAMESPACE"
-        operator-sdk run bundle -n "$INSTALL_NAMESPACE" \"$OO_BUNDLE\"\noc
-        get pods -n openshift-gitops-operator \n"
+        operator-sdk run bundle -n "$INSTALL_NAMESPACE" "$OO_BUNDLE"
+        oc wait --for condition=Available -n "$INSTALL_NAMESPACE" deployment gitops-operator-controller-manager
       dependencies:
       - env: OO_BUNDLE
         name: gitops-operator-bundle
@@ -97,14 +97,20 @@ tests:
     version: "4.10"
   skip_if_only_changed: ^docs/|\.(md|adoc)$|^(README|LICENSE|OWNERS)$
   steps:
+    env:
+      INSTALL_NAMESPACE: openshift-gitops-operator
     test:
     - as: install
       cli: latest
-      commands: "operator-sdk run bundle -n openshift-gitops-operator \"$OO_BUNDLE\"\noc
-        get pods -n openshift-gitops-operator \n"
+      commands: |
+        oc create namespace "$INSTALL_NAMESPACE"
+        operator-sdk run bundle -n "$INSTALL_NAMESPACE" "$OO_BUNDLE"
+        oc wait --for condition=Available -n "$INSTALL_NAMESPACE" deployment gitops-operator-controller-manager
       dependencies:
       - env: OO_BUNDLE
         name: gitops-operator-bundle
+      env:
+      - name: INSTALL_NAMESPACE
       from: operator-sdk
       resources:
         requests:
