minor change of command
Signed-off-by: varshab1210 <varshab1210@gmail.com>

--- a/ci-operator/config/redhat-developer/gitops-operator/redhat-developer-gitops-operator-change-installation-namespace__v4.10.yaml
+++ b/ci-operator/config/redhat-developer/gitops-operator/redhat-developer-gitops-operator-change-installation-namespace__v4.10.yaml
@@ -66,7 +66,7 @@ tests:
       commands: |
         oc create namespace "$INSTALL_NAMESPACE"
         operator-sdk run bundle -n "$INSTALL_NAMESPACE" "$OO_BUNDLE"
-        oc get deployments -n "$INSTALL_NAMESPACE"
+        oc wait --for condition=Available -n "$INSTALL_NAMESPACE" deployment openshift-gitops-operator-controller-manager
       dependencies:
       - env: OO_BUNDLE
         name: gitops-operator-bundle
@@ -105,7 +105,7 @@ tests:
       commands: |
         oc create namespace "$INSTALL_NAMESPACE"
         operator-sdk run bundle -n "$INSTALL_NAMESPACE" "$OO_BUNDLE"
-        oc get deployments -n "$INSTALL_NAMESPACE"
+        oc wait --for condition=Available -n "$INSTALL_NAMESPACE" deployment openshift-gitops-operator-controller-manager
       dependencies:
       - env: OO_BUNDLE
         name: gitops-operator-bundle
