--- a/ci-operator/config/redhat-appstudio/application-service/redhat-appstudio-application-service-main.yaml
+++ b/ci-operator/config/redhat-appstudio/application-service/redhat-appstudio-application-service-main.yaml
@@ -1,3 +1,8 @@
+base_images:
+  hypershift-operator:
+    name: "4.14"
+    namespace: ocp
+    tag: hypershift-operator
 build_root:
   image_stream_tag:
     name: redhat-appstudio
@@ -23,16 +28,14 @@ tests:
 - as: application-service-e2e
   skip_if_only_changed: ^docs/|^\.github/|^\.tekton/|\.md$|^(?:.*/)?(?:\.gitignore|OWNERS|PROJECT|LICENSE)$
   steps:
-    cluster_profile: aws-2
+    cluster_profile: aws
     dependencies:
       COMPONENT_IMAGE: redhat-appstudio-has-image
     env:
-      COMPUTE_NODE_TYPE: m6i.4xlarge
       HYPERSHIFT_HC_RELEASE_IMAGE: quay.io/openshift-release-dev/ocp-release:4.12.26-multi
-      HYPERSHIFT_NODE_COUNT: "3"
     test:
     - ref: redhat-appstudio-e2e
-    workflow: redhat-appstudio-install
+    workflow: redhat-appstudio-install-hypershift-nested
 zz_generated_metadata:
   branch: main
   org: redhat-appstudio
