--- a/ci-operator/config/redhat-appstudio/e2e-tests/redhat-appstudio-e2e-tests-main.yaml
+++ b/ci-operator/config/redhat-appstudio/e2e-tests/redhat-appstudio-e2e-tests-main.yaml
@@ -1,3 +1,8 @@
+base_images:
+  hypershift-operator:
+    name: "4.14"
+    namespace: ocp
+    tag: hypershift-operator
 build_root:
   image_stream_tag:
     name: builder
@@ -41,14 +46,12 @@ tests:
 - as: redhat-appstudio-e2e
   skip_if_only_changed: ^docs/|^\.github/|^\.tekton/|\.md$|^tests/load-tests/|^cmd/loadTests.go$|^(?:.*/)?(?:\.gitignore|OWNERS|PROJECT|LICENSE)$
   steps:
-    cluster_profile: aws-2
+    cluster_profile: aws
     env:
-      COMPUTE_NODE_TYPE: m6i.4xlarge
       HYPERSHIFT_HC_RELEASE_IMAGE: quay.io/openshift-release-dev/ocp-release:4.12.26-multi
-      HYPERSHIFT_NODE_COUNT: "3"
     test:
     - ref: redhat-appstudio-e2e
-    workflow: redhat-appstudio-install
+    workflow: redhat-appstudio-install-hypershift-nested
 - as: appstudio-dump-external-resources
   cron: 0 */24 * * *
   steps:
