--- a/ci-operator/config/redhat-appstudio/infra-deployments/redhat-appstudio-infra-deployments-main.yaml
+++ b/ci-operator/config/redhat-appstudio/infra-deployments/redhat-appstudio-infra-deployments-main.yaml
@@ -1,6 +1,6 @@
 base_images:
   hypershift-operator:
-    name: "4.12"
+    name: "4.14"
     namespace: ocp
     tag: hypershift-operator
 build_root:
@@ -26,26 +26,22 @@ tests:
   optional: true
   skip_if_only_changed: ^docs/|^\.github/|^\.tekton/|^components/(authentication|quality-dashboard|hac-pact-broker|tekton-ci)/|\.md$|^(?:.*/)?(?:\.gitignore|OWNERS|PROJECT|LICENSE)$
   steps:
-    cluster_profile: aws-2
+    cluster_profile: aws
     env:
-      COMPUTE_NODE_TYPE: m6i.4xlarge
       HYPERSHIFT_HC_RELEASE_IMAGE: quay.io/openshift-release-dev/ocp-release:4.12.26-multi
-      HYPERSHIFT_NODE_COUNT: "3"
     test:
     - ref: redhat-appstudio-install-rhtap
     - ref: redhat-appstudio-hac-e2e
-    workflow: redhat-appstudio-install
+    workflow: redhat-appstudio-install-hypershift-nested
 - as: appstudio-e2e-tests
   skip_if_only_changed: ^docs/|^\.github/|^\.tekton/|^components/(authentication|quality-dashboard|hac-pact-broker|tekton-ci)/|\.md$|^(?:.*/)?(?:\.gitignore|OWNERS|PROJECT|LICENSE)$
   steps:
-    cluster_profile: aws-2
+    cluster_profile: aws
     env:
-      COMPUTE_NODE_TYPE: m6i.4xlarge
       HYPERSHIFT_HC_RELEASE_IMAGE: quay.io/openshift-release-dev/ocp-release:4.12.26-multi
-      HYPERSHIFT_NODE_COUNT: "3"
     test:
     - ref: redhat-appstudio-e2e
-    workflow: redhat-appstudio-install
+    workflow: redhat-appstudio-install-hypershift-nested
 - always_run: false
   as: appstudio-load-test
   steps:
@@ -61,12 +57,10 @@ tests:
   steps:
     cluster_profile: aws-2
     env:
-      COMPUTE_NODE_TYPE: m6i.4xlarge
       HYPERSHIFT_HC_RELEASE_IMAGE: quay.io/openshift-release-dev/ocp-release:4.12.26-multi
-      HYPERSHIFT_NODE_COUNT: "3"
     test:
     - ref: redhat-appstudio-e2e
-    workflow: redhat-appstudio-install
+    workflow: redhat-appstudio-install-hypershift-nested
 zz_generated_metadata:
   branch: main
   org: redhat-appstudio
