hypershift-agent: enable dual-stack

--- a/ci-operator/config/openshift/hypershift/openshift-hypershift-release-4.14__periodics.yaml
+++ b/ci-operator/config/openshift/hypershift/openshift-hypershift-release-4.14__periodics.yaml
@@ -135,6 +135,23 @@ tests:
       LVM_OPERATOR_SUB_CHANNEL: stable-4.14
       MCE_VERSION: "2.4"
     workflow: hypershift-mce-agent-conformance
+- as: e2e-agent-ovn-dualstack-conformance
+  cron: 0 8 * * *
+  steps:
+    cluster_profile: equinix-ocp-metal
+    dependencies:
+      INDEX_IMAGE: assisted-service-index
+    env:
+      DEVSCRIPTS_CONFIG: |
+        IP_STACK=v4v6
+        NETWORK_TYPE=OVNKubernetes
+        EXTRA_WORKER_VCPU=8
+        EXTRA_WORKER_MEMORY=16384
+        EXTRA_WORKER_DISK=100
+        PROVISIONING_NETWORK_PROFILE=Disabled
+        REDFISH_EMULATOR_IGNORE_BOOT_DEVICE=True
+      IP_STACK: v4v6
+    workflow: hypershift-agent-conformance
 - as: e2e-kubevirt-conformance
   cron: 0 4 * * *
   steps:
