--- a/ci-operator/step-registry/hypershift/powervs/run-e2e/hypershift-powervs-run-e2e-chain.yaml
+++ b/ci-operator/step-registry/hypershift/powervs/run-e2e/hypershift-powervs-run-e2e-chain.yaml
@@ -4,12 +4,6 @@ chain:
     - as: run-e2e
       cli: latest
       commands: |-
-        # Complie
-        make
-        
-        # Install hypershift
-        bin/hypershift --version
-        bin/hypershift install --hypershift-image ${HYPERSHIFT_RELEASE_LATEST}
         
         # Running e2e test
         bin/test-e2e \
@@ -20,14 +14,12 @@ chain:
         --e2e.pull-secret-file=/etc/ci-pull-credentials/.dockerconfigjson \
         --e2e.base-domain=hypershift-ppc64le.com \
         --e2e.latest-release-image=${OCP_IMAGE_MULTI} \
-        --e2e.control-plane-operator-image=${HYPERSHIFT_RELEASE_LATEST_CPO} \
+        --e2e.control-plane-operator-image=${HYPERSHIFT_RELEASE_LATEST} \
         --e2e.node-pool-replicas=2 \
         --e2e.powervs-resource-group=ibm-hypershift-dev \
-        --e2e.powervs-region=osa \
-        --e2e.powervs-zone=osa21 \
-        --e2e.powervs-vpc-region=jp-osa \
-        --e2e.powervs-proc-type=dedicated \
-        --e2e.powervs-processors=1
+        --e2e.powervs-region=tok \
+        --e2e.powervs-zone=tok04 \
+        --e2e.powervs-vpc-region=jp-tok
       credentials:
         - mount_path: /etc/hypershift-pool-powervs-credentials
           name: hypershift-pool-powervs-credentials
@@ -40,8 +32,6 @@ chain:
           name: release:multi-latest
         - env: HYPERSHIFT_RELEASE_LATEST
           name: hypershift-operator
-        - env: HYPERSHIFT_RELEASE_LATEST_CPO
-          name: hypershift
       env:
         - default: ${SHARED_DIR}/management_cluster_kubeconfig
           name: KUBECONFIG
