--- a/ci-operator/step-registry/openshift/e2e/powervs/ipi/openshift-e2e-powervs-ipi-workflow.yaml
+++ b/ci-operator/step-registry/openshift/e2e/powervs/ipi/openshift-e2e-powervs-ipi-workflow.yaml
@@ -15,3 +15,5 @@ workflow:
     All modifications to this workflow should be done by modifying the
     `ipi-powervs-{pre,post}` chains to allow other workflows to mimic and
     extend this base workflow without a need to backport changes.
+
+    testbyqe
