--- a/ci-operator/config/openshift-qe/ocp-qe-perfscale-ci/openshift-qe-ocp-qe-perfscale-ci-main__rosa-4.14-nightly.yaml
+++ b/ci-operator/config/openshift-qe/ocp-qe-perfscale-ci/openshift-qe-ocp-qe-perfscale-ci-main__rosa-4.14-nightly.yaml
@@ -21,20 +21,21 @@ resources:
       cpu: 100m
       memory: 200Mi
 tests:
-- as: perfscale-rosa-multiaz-cluster-density-v2-120nodes
+- as: perfscale-rosa-multiaz-ci-tests-medium-scale-kube-burner
   cron: 0 12 * * 6
   steps:
     cluster_profile: aws-perfscale
     env:
       CHANNEL_GROUP: nightly
-      COMPUTE_MACHINE_TYPE: m5.xlarge
+      COMPUTE_MACHINE_TYPE: m5.2xlarge
       ENABLE_AUTOSCALING: "false"
       MULTI_AZ: "true"
       OPENSHIFT_VERSION: "4.14"
       REPLICAS: "120"
     test:
-    - chain: openshift-qe-cluster-density-v2
+    - chain: openshift-qe-ocp-qe-perfscale-ci-tests
     workflow: rosa-aws-sts
+  timeout: 5h0m0s
 zz_generated_metadata:
   branch: main
   org: openshift-qe
