feat(RHTAPSRE-108): Compare performance of various AWS instance types for RHTAP
Signed-off-by: Pavel Macík <pavel.macik@gmail.com>

--- a/ci-operator/config/redhat-appstudio/e2e-tests/redhat-appstudio-e2e-tests-main.yaml
+++ b/ci-operator/config/redhat-appstudio/e2e-tests/redhat-appstudio-e2e-tests-main.yaml
@@ -212,6 +212,138 @@ tests:
       SCENARIO: max-concurrency-basic-tekton-tuned
     workflow: redhat-appstudio-load-test-max-concurrency
   timeout: 8h0m0s
+- always_run: false
+  as: max-concurrency-basic-m5-xlarge
+  steps:
+    cluster_profile: aws
+    env:
+      COMPUTE_NODE_REPLICAS: "5"
+      COMPUTE_NODE_TYPE: m5.xlarge
+      CONTROL_PLANE_INSTANCE_TYPE: m5.8xlarge
+      SCENARIO: max-concurrency-basic
+    workflow: redhat-appstudio-load-test-max-concurrency
+  timeout: 8h0m0s
+- always_run: false
+  as: max-concurrency-basic-m5-2xlarge
+  steps:
+    cluster_profile: aws
+    env:
+      COMPUTE_NODE_REPLICAS: "5"
+      COMPUTE_NODE_TYPE: m5.2xlarge
+      CONTROL_PLANE_INSTANCE_TYPE: m5.8xlarge
+      SCENARIO: max-concurrency-basic
+    workflow: redhat-appstudio-load-test-max-concurrency
+  timeout: 8h0m0s
+- always_run: false
+  as: max-concurrency-basic-r5-xlarge
+  steps:
+    cluster_profile: aws
+    env:
+      COMPUTE_NODE_REPLICAS: "5"
+      COMPUTE_NODE_TYPE: r5.xlarge
+      CONTROL_PLANE_INSTANCE_TYPE: r5.8xlarge
+      SCENARIO: max-concurrency-basic
+    workflow: redhat-appstudio-load-test-max-concurrency
+  timeout: 8h0m0s
+- always_run: false
+  as: max-concurrency-basic-m5d-2xlarge
+  steps:
+    cluster_profile: aws
+    env:
+      COMPUTE_NODE_REPLICAS: "5"
+      COMPUTE_NODE_TYPE: m5d.2xlarge
+      CONTROL_PLANE_INSTANCE_TYPE: m5d.8xlarge
+      SCENARIO: max-concurrency-basic
+    workflow: redhat-appstudio-load-test-max-concurrency
+  timeout: 8h0m0s
+- always_run: false
+  as: max-concurrency-basic-t3-2xlarge
+  steps:
+    cluster_profile: aws
+    env:
+      COMPUTE_NODE_REPLICAS: "5"
+      COMPUTE_NODE_TYPE: t3.2xlarge
+      CONTROL_PLANE_INSTANCE_TYPE: t3.8xlarge
+      SCENARIO: max-concurrency-basic
+    workflow: redhat-appstudio-load-test-max-concurrency
+  timeout: 8h0m0s
+- always_run: false
+  as: max-concurrency-basic-c5-2xlarge
+  steps:
+    cluster_profile: aws
+    env:
+      COMPUTE_NODE_REPLICAS: "5"
+      COMPUTE_NODE_TYPE: c5.2xlarge
+      CONTROL_PLANE_INSTANCE_TYPE: c5.8xlarge
+      SCENARIO: max-concurrency-basic
+    workflow: redhat-appstudio-load-test-max-concurrency
+  timeout: 8h0m0s
+- always_run: false
+  as: max-concurrency-basic-c5d-2xlarge
+  steps:
+    cluster_profile: aws
+    env:
+      COMPUTE_NODE_REPLICAS: "5"
+      COMPUTE_NODE_TYPE: c5d.2xlarge
+      CONTROL_PLANE_INSTANCE_TYPE: c5d.8xlarge
+      SCENARIO: max-concurrency-basic
+    workflow: redhat-appstudio-load-test-max-concurrency
+  timeout: 8h0m0s
+- always_run: false
+  as: max-concurrency-basic-i3-2xlarge
+  steps:
+    cluster_profile: aws
+    env:
+      COMPUTE_NODE_REPLICAS: "5"
+      COMPUTE_NODE_TYPE: i3.2xlarge
+      CONTROL_PLANE_INSTANCE_TYPE: i3.8xlarge
+      SCENARIO: max-concurrency-basic
+    workflow: redhat-appstudio-load-test-max-concurrency
+  timeout: 8h0m0s
+- always_run: false
+  as: max-concurrency-basic-m6a-xlarge
+  steps:
+    cluster_profile: aws
+    env:
+      COMPUTE_NODE_REPLICAS: "5"
+      COMPUTE_NODE_TYPE: m6a.xlarge
+      CONTROL_PLANE_INSTANCE_TYPE: m6a.8xlarge
+      SCENARIO: max-concurrency-basic
+    workflow: redhat-appstudio-load-test-max-concurrency
+  timeout: 8h0m0s
+- always_run: false
+  as: max-concurrency-basic-m6a-2xlarge
+  steps:
+    cluster_profile: aws
+    env:
+      COMPUTE_NODE_REPLICAS: "5"
+      COMPUTE_NODE_TYPE: m6a.2xlarge
+      CONTROL_PLANE_INSTANCE_TYPE: m6a.8xlarge
+      SCENARIO: max-concurrency-basic
+    workflow: redhat-appstudio-load-test-max-concurrency
+  timeout: 8h0m0s
+- always_run: false
+  as: max-concurrency-basic-m6i-2xlarge
+  steps:
+    cluster_profile: aws
+    env:
+      COMPUTE_NODE_REPLICAS: "5"
+      COMPUTE_NODE_TYPE: m6i.2xlarge
+      CONTROL_PLANE_INSTANCE_TYPE: m6i.8xlarge
+      SCENARIO: max-concurrency-basic
+    workflow: redhat-appstudio-load-test-max-concurrency
+  timeout: 8h0m0s
+- always_run: false
+  as: max-concurrency-basic-m6id-2xlarge
+  steps:
+    cluster_profile: aws
+    env:
+      COMPUTE_NODE_REPLICAS: "5"
+      COMPUTE_NODE_TYPE: m6id.2xlarge
+      CONTROL_PLANE_INSTANCE_TYPE: m6id.8xlarge
+      SCENARIO: max-concurrency-basic
+    workflow: redhat-appstudio-load-test-max-concurrency
+  timeout: 8h0m0s
 zz_generated_metadata:
   branch: main
   org: redhat-appstudio
