--- a/ci-operator/config/openshift/microshift/openshift-microshift-main.yaml
+++ b/ci-operator/config/openshift/microshift/openshift-microshift-main.yaml
@@ -130,6 +130,15 @@ tests:
     env:
       DRY_RUN: "y"
     workflow: openshift-microshift-rebase
+- always_run: false
+  as: e2e-openshift-tests-check
+  cluster: build02
+  optional: true
+  steps:
+    cluster_profile: aws
+    env:
+      EC2_AMI: ami-02b8534ff4b424939
+    workflow: openshift-microshift-e2e-openshift-tests
 - as: microshift-e2e
   cluster: build02
   run_if_changed: ^(assets/.*|cmd/.*|etcd/.*|pkg/.*|packaging/.*|test/.*|vendor/.*|go\.sum|go\.mod|Makefile|.*\.sh)
