Updates for slack, artifacts and firewatch

--- a/ci-operator/step-registry/rhsi/run-tests/rhsi-run-tests-ref.yaml
+++ b/ci-operator/step-registry/rhsi/run-tests/rhsi-run-tests-ref.yaml
@@ -10,5 +10,22 @@ ref:
       ci-operator.openshift.io/shm: 2G
     limits:
       ci-operator.openshift.io/shm: 2G
+  env:
+  - name: QUIET
+    default: "TRUE"
+    documentation: |-
+      Tag used to silence debug messages. Set to null to get debug messages.
+  - name: SKIPTEARDOWN
+    default: ""
+    documentation: |-
+      Skips the teardown phase. Set to null to perform teardown. If set will skip.
+  - name: STARTINGCSV
+    default: ""
+    documentation: |-
+      Specify version. Set to null to just install the latest.
+  - name: WAITLIMIT
+    default: "120"
+    documentation: |-
+      The test waits the number of seconds for the operations to get completed.
   documentation: |-
     Setup, execute the test suite entrypoint, and archive the test run artifacts.
