--- a/ci-operator/jobs/rhpit/interop-tests/rhpit-interop-tests-main-presubmits.yaml
+++ b/ci-operator/jobs/rhpit/interop-tests/rhpit-interop-tests-main-presubmits.yaml
@@ -941,18 +941,18 @@ presubmits:
     branches:
     - ^main$
     - ^main-
-    cluster: build02
-    context: ci/prow/smatula-ocp4.13-lp-interop-images
+    cluster: build05
+    context: ci/prow/service-interconnect-ocp4.13-lp-interop-images
     decorate: true
     decoration_config:
       skip_cloning: true
     labels:
-      ci-operator.openshift.io/variant: smatula-ocp4.13-lp-interop
+      ci-operator.openshift.io/variant: service-interconnect-ocp4.13-lp-interop
       ci.openshift.io/generator: prowgen
       job-release: "4.13"
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
-    name: pull-ci-rhpit-interop-tests-main-smatula-ocp4.13-lp-interop-images
-    rerun_command: /test smatula-ocp4.13-lp-interop-images
+    name: pull-ci-rhpit-interop-tests-main-service-interconnect-ocp4.13-lp-interop-images
+    rerun_command: /test service-interconnect-ocp4.13-lp-interop-images
     spec:
       containers:
       - args:
@@ -960,7 +960,7 @@ presubmits:
         - --image-import-pull-secret=/etc/pull-secret/.dockerconfigjson
         - --report-credentials-file=/etc/report/credentials
         - --target=[images]
-        - --variant=smatula-ocp4.13-lp-interop
+        - --variant=service-interconnect-ocp4.13-lp-interop
         command:
         - ci-operator
         image: ci-operator:latest
@@ -987,4 +987,56 @@ presubmits:
       - name: result-aggregator
         secret:
           secretName: result-aggregator
-    trigger: (?m)^/test( | .* )smatula-ocp4.13-lp-interop-images,?($|\s.*)
+    trigger: (?m)^/test( | .* )service-interconnect-ocp4.13-lp-interop-images,?($|\s.*)
+  - agent: kubernetes
+    always_run: true
+    branches:
+    - ^main$
+    - ^main-
+    cluster: build05
+    context: ci/prow/service-interconnect-ocp4.14-lp-interop-images
+    decorate: true
+    decoration_config:
+      skip_cloning: true
+    labels:
+      ci-operator.openshift.io/variant: service-interconnect-ocp4.14-lp-interop
+      ci.openshift.io/generator: prowgen
+      job-release: "4.14"
+      pj-rehearse.openshift.io/can-be-rehearsed: "true"
+    name: pull-ci-rhpit-interop-tests-main-service-interconnect-ocp4.14-lp-interop-images
+    rerun_command: /test service-interconnect-ocp4.14-lp-interop-images
+    spec:
+      containers:
+      - args:
+        - --gcs-upload-secret=/secrets/gcs/service-account.json
+        - --image-import-pull-secret=/etc/pull-secret/.dockerconfigjson
+        - --report-credentials-file=/etc/report/credentials
+        - --target=[images]
+        - --variant=service-interconnect-ocp4.14-lp-interop
+        command:
+        - ci-operator
+        image: ci-operator:latest
+        imagePullPolicy: Always
+        name: ""
+        resources:
+          requests:
+            cpu: 10m
+        volumeMounts:
+        - mountPath: /secrets/gcs
+          name: gcs-credentials
+          readOnly: true
+        - mountPath: /etc/pull-secret
+          name: pull-secret
+          readOnly: true
+        - mountPath: /etc/report
+          name: result-aggregator
+          readOnly: true
+      serviceAccountName: ci-operator
+      volumes:
+      - name: pull-secret
+        secret:
+          secretName: registry-pull-credentials
+      - name: result-aggregator
+        secret:
+          secretName: result-aggregator
+    trigger: (?m)^/test( | .* )service-interconnect-ocp4.14-lp-interop-images,?($|\s.*)
