create unittest job in linuxptp-daemon CI
Signed-off-by: Nishant Parekh <nparekh@redhat.com>

--- a/ci-operator/config/openshift/linuxptp-daemon/openshift-linuxptp-daemon-master.yaml
+++ b/ci-operator/config/openshift/linuxptp-daemon/openshift-linuxptp-daemon-master.yaml
@@ -43,6 +43,10 @@ resources:
       cpu: 100m
       memory: 200Mi
 tests:
+- as: unittest
+  commands: make unittest
+  container:
+    from: src
 - as: gofmt
   commands: make fmt
   container:
