--- a/ci-operator/config/openshift/linuxptp-daemon/openshift-linuxptp-daemon-release-4.15.yaml
+++ b/ci-operator/config/openshift/linuxptp-daemon/openshift-linuxptp-daemon-release-4.15.yaml
@@ -43,6 +43,10 @@ resources:
       cpu: 100m
       memory: 200Mi
 tests:
+- as: unittest
+  commands: make unittest
+  container:
+    from: src
 - as: gofmt
   commands: make fmt
   container:
