Added trilliandb Image

--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -3,6 +3,11 @@ build_root:
     name: release
     namespace: openshift
     tag: golang-1.13
+  base_images:
+    trilliandb:
+      namespace: securesign
+      name: trillian-db
+      tag: v1.5.2
 resources:
   '*':
     limits:
