Update env vars for rhsi ref

--- a/ci-operator/step-registry/rhsi/run-tests/rhsi-run-tests-ref.yaml
+++ b/ci-operator/step-registry/rhsi/run-tests/rhsi-run-tests-ref.yaml
@@ -12,17 +12,17 @@ ref:
       ci-operator.openshift.io/shm: 2G
   env:
   - name: QUIET
-    default: "TRUE"
+    default: ""
     documentation: |-
-      Tag used to silence debug messages. Set to null to get debug messages.
+      Tag used to silence debug messages. Set to quiet debug messages.
   - name: SKIPTEARDOWN
     default: ""
     documentation: |-
-      Skips the teardown phase. Set to null to perform teardown. If set will skip.
+      Skips the teardown phase. Set to skip teardown.
   - name: STARTINGCSV
     default: ""
     documentation: |-
-      Specify version. Set to null to just install the latest.
+      Specify version. Not set will install the latest.
   - name: WAITLIMIT
     default: "120"
     documentation: |-
