--- a/ci-operator/jobs/CSPI-QE/MSI/CSPI-QE-MSI-cluster-install-uninstall-periodics.yaml
+++ b/ci-operator/jobs/CSPI-QE/MSI/CSPI-QE-MSI-cluster-install-uninstall-periodics.yaml
@@ -15,7 +15,7 @@ periodics:
     ci.openshift.io/generator: prowgen
     job-release: "4.13"
     pj-rehearse.openshift.io/can-be-rehearsed: "true"
-  name: periodic-ci-CSPI-QE-MSI-cluster-install-uninstall-cluster-install-uninstall-aws-ipi
+  name: periodic-ci-CSPI-QE-MSI-cluster-install-uninstall-cluster-install-uninstall-aws-ipi-4.13-ci
   spec:
     containers:
     - args:
@@ -24,8 +24,8 @@ periodics:
       - --lease-server-credentials-file=/etc/boskos/credentials
       - --report-credentials-file=/etc/report/credentials
       - --secret-dir=/secrets/ci-pull-credentials
-      - --secret-dir=/usr/local/cluster-install-uninstall-aws-ipi-cluster-profile
-      - --target=cluster-install-uninstall-aws-ipi
+      - --secret-dir=/usr/local/cluster-install-uninstall-aws-ipi-4.13-ci-cluster-profile
+      - --target=cluster-install-uninstall-aws-ipi-4.13-ci
       command:
       - ci-operator
       image: ci-operator:latest
@@ -41,7 +41,7 @@ periodics:
       - mountPath: /secrets/ci-pull-credentials
         name: ci-pull-credentials
         readOnly: true
-      - mountPath: /usr/local/cluster-install-uninstall-aws-ipi-cluster-profile
+      - mountPath: /usr/local/cluster-install-uninstall-aws-ipi-4.13-ci-cluster-profile
         name: cluster-profile
       - mountPath: /secrets/gcs
         name: gcs-credentials
@@ -88,7 +88,7 @@ periodics:
     ci.openshift.io/generator: prowgen
     job-release: "4.13"
     pj-rehearse.openshift.io/can-be-rehearsed: "true"
-  name: periodic-ci-CSPI-QE-MSI-cluster-install-uninstall-cluster-install-uninstall-hypershift
+  name: periodic-ci-CSPI-QE-MSI-cluster-install-uninstall-cluster-install-uninstall-hypershift-4.13-candidate
   spec:
     containers:
     - args:
@@ -97,8 +97,8 @@ periodics:
       - --lease-server-credentials-file=/etc/boskos/credentials
       - --report-credentials-file=/etc/report/credentials
       - --secret-dir=/secrets/ci-pull-credentials
-      - --secret-dir=/usr/local/cluster-install-uninstall-hypershift-cluster-profile
-      - --target=cluster-install-uninstall-hypershift
+      - --secret-dir=/usr/local/cluster-install-uninstall-hypershift-4.13-candidate-cluster-profile
+      - --target=cluster-install-uninstall-hypershift-4.13-candidate
       command:
       - ci-operator
       image: ci-operator:latest
@@ -114,7 +114,7 @@ periodics:
       - mountPath: /secrets/ci-pull-credentials
         name: ci-pull-credentials
         readOnly: true
-      - mountPath: /usr/local/cluster-install-uninstall-hypershift-cluster-profile
+      - mountPath: /usr/local/cluster-install-uninstall-hypershift-4.13-candidate-cluster-profile
         name: cluster-profile
       - mountPath: /secrets/gcs
         name: gcs-credentials
@@ -161,7 +161,7 @@ periodics:
     ci.openshift.io/generator: prowgen
     job-release: "4.13"
     pj-rehearse.openshift.io/can-be-rehearsed: "true"
-  name: periodic-ci-CSPI-QE-MSI-cluster-install-uninstall-cluster-install-uninstall-rosa
+  name: periodic-ci-CSPI-QE-MSI-cluster-install-uninstall-cluster-install-uninstall-rosa-4.14-candidate
   spec:
     containers:
     - args:
@@ -170,8 +170,8 @@ periodics:
       - --lease-server-credentials-file=/etc/boskos/credentials
       - --report-credentials-file=/etc/report/credentials
       - --secret-dir=/secrets/ci-pull-credentials
-      - --secret-dir=/usr/local/cluster-install-uninstall-rosa-cluster-profile
-      - --target=cluster-install-uninstall-rosa
+      - --secret-dir=/usr/local/cluster-install-uninstall-rosa-4.14-candidate-cluster-profile
+      - --target=cluster-install-uninstall-rosa-4.14-candidate
       command:
       - ci-operator
       image: ci-operator:latest
@@ -187,7 +187,7 @@ periodics:
       - mountPath: /secrets/ci-pull-credentials
         name: ci-pull-credentials
         readOnly: true
-      - mountPath: /usr/local/cluster-install-uninstall-rosa-cluster-profile
+      - mountPath: /usr/local/cluster-install-uninstall-rosa-4.14-candidate-cluster-profile
         name: cluster-profile
       - mountPath: /secrets/gcs
         name: gcs-credentials
@@ -234,7 +234,7 @@ periodics:
     ci.openshift.io/generator: prowgen
     job-release: "4.13"
     pj-rehearse.openshift.io/can-be-rehearsed: "true"
-  name: periodic-ci-CSPI-QE-MSI-cluster-install-uninstall-multi-cluster-install-aws
+  name: periodic-ci-CSPI-QE-MSI-cluster-install-uninstall-multi-cluster-install-uninstall-aws-4.13-ci-4.14-nightly
   spec:
     containers:
     - args:
@@ -243,8 +243,8 @@ periodics:
       - --lease-server-credentials-file=/etc/boskos/credentials
       - --report-credentials-file=/etc/report/credentials
       - --secret-dir=/secrets/ci-pull-credentials
-      - --secret-dir=/usr/local/multi-cluster-install-aws-cluster-profile
-      - --target=multi-cluster-install-aws
+      - --secret-dir=/usr/local/multi-cluster-install-uninstall-aws-4.13-ci-4.14-nightly-cluster-profile
+      - --target=multi-cluster-install-uninstall-aws-4.13-ci-4.14-nightly
       command:
       - ci-operator
       image: ci-operator:latest
@@ -260,7 +260,7 @@ periodics:
       - mountPath: /secrets/ci-pull-credentials
         name: ci-pull-credentials
         readOnly: true
-      - mountPath: /usr/local/multi-cluster-install-aws-cluster-profile
+      - mountPath: /usr/local/multi-cluster-install-uninstall-aws-4.13-ci-4.14-nightly-cluster-profile
         name: cluster-profile
       - mountPath: /secrets/gcs
         name: gcs-credentials
