--- a/ci-operator/config/CSPI-QE/MSI/CSPI-QE-MSI-multi-cluster-smoke__v4.13.yaml
+++ b/ci-operator/config/CSPI-QE/MSI/CSPI-QE-MSI-multi-cluster-smoke__v4.13.yaml
@@ -21,7 +21,7 @@ resources:
       cpu: 100m
       memory: 200Mi
 tests:
-- as: multi-cluster-aws-4.13-nightly-hypershift-4.13-candidate-smoke
+- as: multicluster-aws-4.13-nightly-hypershift-4.13-candidate-smoke
   cron: '@yearly'
   steps:
     cluster_profile: aws-managed-cspi-qe
