--- a/ci-operator/jobs/CSPI-QE/MSI/CSPI-QE-MSI-multi-cluster-smoke-periodics.yaml
+++ b/ci-operator/jobs/CSPI-QE/MSI/CSPI-QE-MSI-multi-cluster-smoke-periodics.yaml
@@ -16,7 +16,7 @@ periodics:
     ci.openshift.io/generator: prowgen
     job-release: "4.13"
     pj-rehearse.openshift.io/can-be-rehearsed: "true"
-  name: periodic-ci-CSPI-QE-MSI-multi-cluster-smoke-v4.13-multi-cluster-aws-hypershift-smoke
+  name: periodic-ci-CSPI-QE-MSI-multi-cluster-smoke-v4.13-multicluster-aws-4.13-nightly-hypershift-4.13-candidate-smoke
   spec:
     containers:
     - args:
@@ -25,8 +25,8 @@ periodics:
       - --lease-server-credentials-file=/etc/boskos/credentials
       - --report-credentials-file=/etc/report/credentials
       - --secret-dir=/secrets/ci-pull-credentials
-      - --secret-dir=/usr/local/multi-cluster-aws-hypershift-smoke-cluster-profile
-      - --target=multi-cluster-aws-hypershift-smoke
+      - --secret-dir=/usr/local/multicluster-aws-4.13-nightly-hypershift-4.13-candidate-smoke-cluster-profile
+      - --target=multicluster-aws-4.13-nightly-hypershift-4.13-candidate-smoke
       - --variant=v4.13
       command:
       - ci-operator
@@ -43,7 +43,7 @@ periodics:
       - mountPath: /secrets/ci-pull-credentials
         name: ci-pull-credentials
         readOnly: true
-      - mountPath: /usr/local/multi-cluster-aws-hypershift-smoke-cluster-profile
+      - mountPath: /usr/local/multicluster-aws-4.13-nightly-hypershift-4.13-candidate-smoke-cluster-profile
         name: cluster-profile
       - mountPath: /secrets/gcs
         name: gcs-credentials
