increasing 4.14 nodes and moving to m6a type

--- a/ci-operator/config/openshift-qe/ocp-qe-perfscale-ci/openshift-qe-ocp-qe-perfscale-ci-main__aws-4.14.yaml
+++ b/ci-operator/config/openshift-qe/ocp-qe-perfscale-ci/openshift-qe-ocp-qe-perfscale-ci-main__aws-4.14.yaml
@@ -28,7 +28,8 @@ tests:
     env:
       BASE_DOMAIN: perfscale.devcluster.openshift.com
       COMPUTE_NODE_REPLICAS: "120"
-      COMPUTE_NODE_TYPE: m5.xlarge
+      COMPUTE_NODE_TYPE: m6a.xlarge
+      CONTROL_PLANE_INSTANCE_TYPE: m6a.2xlarge
       SIZE_VARIANT: large
     post:
     - chain: ipi-aws-post
@@ -44,6 +45,8 @@ tests:
     env:
       BASE_DOMAIN: qe.devcluster.openshift.com
       COMPUTE_NODE_REPLICAS: "24"
+      COMPUTE_NODE_TYPE: m6a.xlarge
+      CONTROL_PLANE_INSTANCE_TYPE: m6a.2xlarge
     post:
     - chain: ipi-aws-post
     pre:
@@ -71,6 +74,8 @@ tests:
       BASE_DOMAIN: qe.devcluster.openshift.com
       COMPUTE_NODE_REPLICAS: "24"
       PODS_PER_NODE: "200"
+      COMPUTE_NODE_TYPE: m6a.xlarge
+      CONTROL_PLANE_INSTANCE_TYPE: m6a.2xlarge
     post:
     - chain: ipi-aws-post
     pre:
@@ -84,7 +89,7 @@ tests:
     env:
       BASE_DOMAIN: qe.devcluster.openshift.com
       COMPUTE_NODE_REPLICAS: "9"
-      COMPUTE_NODE_TYPE: m5.xlarge
+      COMPUTE_NODE_TYPE: m6a.xlarge
       LOKI_USE_SERVICEMONITOR: "false"
     post:
     - chain: ipi-aws-post
