--- a/ci-operator/config/openshift-power-monitoring/kepler-operator/openshift-power-monitoring-kepler-operator-v1alpha1.yaml
+++ b/ci-operator/config/openshift-power-monitoring/kepler-operator/openshift-power-monitoring-kepler-operator-v1alpha1.yaml
@@ -55,7 +55,7 @@ tests:
       cli: latest
       commands: |
         oc create namespace kepler-operator
-        operator-sdk run bundle -n kepler-operator "$OO_BUNDLE" --install-mode AllNamespaces --skip-tls
+        operator-sdk run bundle -n kepler-operator "$OO_BUNDLE"
         oc wait --for condition=Available -n kepler-operator deployment kepler-operator-controller-manager
       dependencies:
       - env: OO_BUNDLE
