Added NMstateconfigs creation

--- a/ci-operator/step-registry/hypershift/mce/ibmz/create/hypershift-mce-ibmz-create-ref.yaml
+++ b/ci-operator/step-registry/hypershift/mce/ibmz/create/hypershift-mce-ibmz-create-ref.yaml
@@ -18,6 +18,8 @@ ref:
       documentation: "Openshift release version for Hosted Control Plane"
     - name: HYPERSHIFT_BASEDOMAIN
       documentation: "Base domain for hosted cluster"
+    - name: IP_ADDRESSES
+      docuentation: "List of IPv4 addresses for agents"
   commands: hypershift-mce-ibmz-create-commands.sh
   from: dev-scripts
   grace_period: 15m0s
