--- a/ci-operator/config/CSPI-QE/MSI/CSPI-QE-MSI-rhods-rhoam__v4.13-stage.yaml
+++ b/ci-operator/config/CSPI-QE/MSI/CSPI-QE-MSI-rhods-rhoam__v4.13-stage.yaml
@@ -10,7 +10,7 @@ base_images:
   rhoam-addon-tests:
     name: integreatly-operator-test-external
     namespace: ci
-    tag: latest
+    tag: master
   rhods-addon-tests:
     name: ods-ci
     namespace: ci
