removed availability check since it will never become availability without placing labels on the nodes

--- a/ci-operator/config/app-sre/deployment-validation-operator/app-sre-deployment-validation-operator-master.yaml
+++ b/ci-operator/config/app-sre/deployment-validation-operator/app-sre-deployment-validation-operator-master.yaml
@@ -73,8 +73,7 @@ tests:
     - as: install
       cli: latest
       commands: |
-        "operator-sdk run bundle -n openshift-operators \"$OO_BUNDLE\"\n
-        oc wait --for condition=Available -n openshift-operators deployment-operator"
+        operator-sdk run bundle -n openshift-operators "$OO_BUNDLE"
       dependencies:
       - env: OO_BUNDLE
         name: dvo-operator-bundle
