--- a/ci-operator/step-registry/upi/conf/vsphere/upi-conf-vsphere-ref.yaml
+++ b/ci-operator/step-registry/upi/conf/vsphere/upi-conf-vsphere-ref.yaml
@@ -14,6 +14,10 @@ ref:
     requests:
       cpu: 10m
       memory: 100Mi
+  env:
+  - name: CCM_TYPE
+    default: ""
+    documentation: "Set to 'External' if an external Cloud Controller Manager is expected to be installed within the cluster. Set to 'None' if no external Cloud Controller Manager is expected to be installed within the cluster. Leave unset for the default."
   dependencies:
   - name: "release:latest"
     env: OPENSHIFT_INSTALL_RELEASE_IMAGE_OVERRIDE
