--- a/ci-operator/step-registry/upi/install/vsphere/upi-install-vsphere-ref.yaml
+++ b/ci-operator/step-registry/upi/install/vsphere/upi-install-vsphere-ref.yaml
@@ -28,6 +28,9 @@ ref:
     documentation: |-
       STORAGE_POLICY_ID is used to encrypt VMs for all nodes of cluster on vsphere platform.
       Once assigned, all VMs will be encrypted with this storage policy.
+  - name: CCM_TYPE
+    default: ""
+    documentation: "Set to 'External' if an external Cloud Controller Manager is expected to be installed within the cluster. Set to 'None' if no external Cloud Controller Manager is expected to be installed within the cluster. Leave unset for the default."
   documentation: >-
     This step deploys a UPI cluster to the CI vSphere project.
     It requires properly configured govc.sh, Ignition, metadata.json, and kubeconfig files to exist in the shared directory.
