--- a/ci-operator/config/app-sre/deployment-validation-operator/app-sre-deployment-validation-operator-master.yaml
+++ b/ci-operator/config/app-sre/deployment-validation-operator/app-sre-deployment-validation-operator-master.yaml
@@ -3,7 +3,7 @@ base_images:
     name: "4.14"
     namespace: ocp
     tag: cli
-  op:
+  operator-sdk:
     name: "4.14"
     namespace: origin
     tag: operator-sdk
