increasing worker nodes

--- a/ci-operator/config/openshift-qe/ocp-qe-perfscale-ci/openshift-qe-ocp-qe-perfscale-ci-main__aws-4.14.yaml
+++ b/ci-operator/config/openshift-qe/ocp-qe-perfscale-ci/openshift-qe-ocp-qe-perfscale-ci-main__aws-4.14.yaml
@@ -28,7 +28,7 @@ tests:
     env:
       BASE_DOMAIN: perfscale.devcluster.openshift.com
       COMPUTE_NODE_REPLICAS: "120"
-      COMPUTE_NODE_TYPE: m6a.xlarge
+      COMPUTE_NODE_TYPE: m6a.2xlarge
       SIZE_VARIANT: large
     post:
     - chain: ipi-aws-post
@@ -72,7 +72,7 @@ tests:
     env:
       BASE_DOMAIN: qe.devcluster.openshift.com
       COMPUTE_NODE_REPLICAS: "24"
-      COMPUTE_NODE_TYPE: m6a.xlarge
+      COMPUTE_NODE_TYPE: m6a.2xlarge
       CONTROL_PLANE_INSTANCE_TYPE: m6a.2xlarge
       PODS_PER_NODE: "200"
     post:
