Add HyperShift workflow for PowerVS
Signed-off-by: Neha Yadav <neha.yadav3@ibm.com>

--- a/ci-operator/config/openshift/hypershift/openshift-hypershift-release-4.14__periodics.yaml
+++ b/ci-operator/config/openshift/hypershift/openshift-hypershift-release-4.14__periodics.yaml
@@ -95,6 +95,10 @@ tests:
   cron: 0 4 * * *
   steps:
     workflow: hypershift-powervs-e2e
+- as: hypershift-hostedcluster-powervs-e2e
+  cron: 0 4 * * *
+  steps:
+    workflow: hypershift-hostedcluster-powervs-workflow
 - as: e2e-ibmcloud-iks
   cron: 0 4 * * *
   steps:
