Revert "Disable kubevirt csi conformance tests (#41492)"
This reverts commit 65a0abd0b3941f7d01a27813188d52819829fdda.

--- a/ci-operator/step-registry/hypershift/kubevirt/baremetalds/conformance/hypershift-kubevirt-baremetalds-conformance-workflow.yaml
+++ b/ci-operator/step-registry/hypershift/kubevirt/baremetalds/conformance/hypershift-kubevirt-baremetalds-conformance-workflow.yaml
@@ -25,6 +25,7 @@ workflow:
     - chain: baremetalds-ipi-post
     test:
     - chain: hypershift-conformance
+    - chain: hypershift-kubevirt-run-csi-e2e
     pre:
     - chain: baremetalds-ipi-pre
     - ref: enable-qe-catalogsource
