--- a/ci-operator/step-registry/hypershift/mce/kubevirt/conformance/hypershift-mce-kubevirt-conformance-workflow.yaml
+++ b/ci-operator/step-registry/hypershift/mce/kubevirt/conformance/hypershift-mce-kubevirt-conformance-workflow.yaml
@@ -14,6 +14,7 @@ workflow:
     - chain: ipi-aws-post
     test:
     - chain: hypershift-conformance
+    - chain: hypershift-kubevirt-run-csi-e2e
     pre:
     - chain: ipi-aws-ovn-pre
     - chain: ipi-install
